--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <main>
 
 <div class="filterImg">
-<img class="img"src="images/prZoo2023.jpg" alt="Животные">
+<img class="img"src="images/zoo_shop.jpg" alt="Животные">
 </div>
 
 </main>
